--- a/styles/styles.css
+++ b/styles/styles.css
@@ -592,8 +592,8 @@ section {
 .portfolios .portfolio-item img {
   width: 100%;
   height: 300px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: fill;
+     object-fit: fill;
   border-radius: 15px;
 }
 
